integration_tests/codegen_fail/fail/scalar_value/missing_attributes.stderr
error: GraphQL built-in scalars missing `#[scalar_value(as_int, as_float)]` attributes. In case you are sure that it\'s ok, use `#[scalar_value(allow_missing_attributes)]`to suppress this error.
  --> fail/scalar_value/missing_attributes.rs:4:1
   |
4  | / pub enum DefaultScalarValue {
5  | |     Int(i32),
6  | |     Float(f64),
7  | |     #[scalar_value(as_str, as_string, into_string)]
...  |
10 | |     Boolean(bool),
11 | | }
   | |_^
